# plox

./: .gitignore  README.md  meson.build
src/: Literal.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h  astgen.cpp  main.cpp  meson.build
test-inputs/: block-comments.plx  well-formed.plx
